<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#E4E4E4"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="PARK_FAST"
            android:textColor="@color/black"
            android:textSize="34sp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="13dp" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/parking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.utils.widget.ImageFilterView>


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="¡Información del Parqueadero!"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="675dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/img_view"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:contentDescription="@string/btn_tomarfoto"
            app:srcCompat="@drawable/descarga__2_" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="100dp"
            android:text="*HORARIOS*"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:background="@color/gray_light"
            android:text="@string/txt_apertura"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:background="@color/gray_light"
            android:text="@string/txt_cierre"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="100dp"
            android:text="*PRECIOS*"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:background="@color/gray_light"
            android:text="@string/txt_por_minuto"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:background="@color/gray_light"
            android:text="@string/txt_por89min"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"/>

        <Button
            android:id="@+id/btn_volver2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:insetLeft="0dp"
            android:text="@string/btn_volver2" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>