<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="PARK_FAST"
            android:textColor="@color/black"
            android:textSize="34sp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="13dp" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/parking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.utils.widget.ImageFilterView>


    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="265dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_registrarseA" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_reservar" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_pagar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_informacion" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="114dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagen_2023_09_26_231543633_removebg_preview"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="177dp" />


</androidx.constraintlayout.widget.ConstraintLayout>